# curl

./: README.md  build.sh  build_project.sh
base/curl-7.82.0/: Makefile  config.status  libcurl.pc  libtool
base/curl-7.82.0/docs/: Makefile
base/curl-7.82.0/include/: Makefile
base/curl-7.82.0/lib/: curl_config.h  libcurl.la
base/curl-7.82.0/scripts/: Makefile
base/curl-7.82.0/src/: Makefile  curl
base/curl-7.82.0/tests/: Makefile  configurehelp.pm
base/openssl-3.0.2/: Makefile.in  configdata.pm  libcrypto.pc  openssl.pc  pod2htmd.tmp
base/openssl-3.0.2/crypto/: buildinf.h  libcrypto-lib-cpuid.d  libcrypto-shlib-cpuid.d  liblegacy-lib-cpuid.d  liblegacy-lib-mem_clr.d
base/openssl-3.0.2/fuzz/: asn1-test  asn1parse-test  bignum-test  bndiv-test  client-test  cmp-test  cms-test  conf-test  crl-test  ct-test  server-test  x509-test
base/openssl-3.0.2/test/: aborttest  aesgcmtest  afalgtest  algorithmid_test  asn1_decode_test  asn1_dsa_internal_test  asn1_encode_test  asn1_internal_test  asn1_string_table_test  asn1_time_test  asynciotest  asynctest  bad_dtls_test  bftest  bio_callback_test  bio_core_test  bio_enc_test  bio_memleak_test  bio_prefix_text  bio_readbuffer_test  bioprinttest  bn_internal_test  bntest  casttest  chacha_internal_test  cipherbytes_test  cipherlist_test  ciphername_test  clienthellotest  cmactest  cmp_asn_test  cmp_client_test  cmp_hdr_test  cmp_msg_test  cmp_protect_test  cmp_server_test  cmp_status_test  cmp_vfy_test  cmsapitest  conf_include_test  (+124 more)
project/: CMakeLists.txt
project/easy_sample/: CMakeLists.txt  main.cpp
(+873 files in other folders)
